# tla-waitlist

./: .gitignore  readme.md
backend/: .gitignore  Cargo.toml  Rocket.toml  config.example.toml
backend/data/: categories.yaml  categories.yaml.example  fitnotes.yaml  fitnotes.yaml.example  fits.dat.example  modules.yaml  skillplan.yaml  skills.yaml  skills.yaml.example  tags.yaml
backend/data/locales/: home.fr.json.backup.1780440693  languages.json  nav.cn.json  nav.cn.json.backup.1780446592  nav.ru.json  nav.ru.json.backup.1780446733
backend/eve-data-core/src/: fitting.rs
backend/eve-data-macros/: Cargo.toml  convert_sde_to_sqlite.rs  type_lookup_cache.json
backend/scripts/: download_convert_sde_to_sqlite.sh
backend/sql/: migration_mysql_0007.sql  migration_mysql_0008.sql  migration_mysql_0009.sql  migration_mysql_0010.sql  migration_mysql_0011.sql  migration_mysql_0012.sql  migration_mysql_0013.sql  migration_mysql_0014.sql  migration_mysql_0015.sql  mysql.sql
backend/src/: app.rs  config.rs  main.rs
backend/src/core/: auth.rs  discord.rs  esi.rs  fleet_updater.rs  incursion_updater.rs  mod.rs  srp_updater.rs
backend/src/data/: categories.rs  fitdiffer.rs  fits.rs  guide_assets.rs  guides.rs  implants.rs  incursion.rs  locales.rs  mod.rs  skillplans.rs  srp.rs  srp_notify.rs  tags.rs  variations.rs
backend/src/routes/: admin.rs  auth.rs  categories.rs  commanders.rs  fittings.rs  fleet.rs  guides.rs  mod.rs  (+7 more)
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: api.js  index.js
sse/: Cargo.toml  LICENSE  sse.sh
(+109 files in other folders)
