[package]
name = "eve_data_macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_data_core = { path = "../eve-data-core" }
syn = "*"
quote = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
rusqlite = { version = "*", features = ["bundled"] }

[[bin]]
name = "convert_sde_to_sqlite"
path = "convert_sde_to_sqlite.rs"
